refactored script.js

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     </header>
     <footer class="footer">
       <div class="map" id="map"></div>
+
+      <div class="error-message"></div>
     </footer>
   </body>
   <script src="script.js"></script>
